--- a/css/app.css
+++ b/css/app.css
@@ -4,6 +4,9 @@
  * Copyright 2021 AdminKit
  * Licensed under MIT (https://github.com/adminkit/adminkit/blob/master/LICENSE)
  */
+ .content a{
+     margin-top: 10px;
+ }
 :root {
     --bs-blue: #3b7ddd;
     --bs-indigo: #0a0a0a;
