--- a/css/app.css
+++ b/css/app.css
@@ -8,6 +8,9 @@
      margin-top: 30px;
      display: block;
  }
+ .content a:hover{
+     background-color:#fcc44c;
+ }
 :root {
     --bs-blue: #3b7ddd;
     --bs-indigo: #0a0a0a;
