--- a/css/app.css
+++ b/css/app.css
@@ -13,6 +13,10 @@
      font-size: 20px;
      color: #0b0b0b;
      padding: 10px 10px;
+     text-decoration: none;
+ }
+ .content a:hover{
+     color: black;
  }
  #a1{
      
