--- a/css/app.css
+++ b/css/app.css
@@ -4,6 +4,10 @@
  * Copyright 2021 AdminKit
  * Licensed under MIT (https://github.com/adminkit/adminkit/blob/master/LICENSE)
  */
+ .note_main
+ {
+     text-align: center;
+ }
  .note
  {
     color: blue;
