--- a/css/app.css
+++ b/css/app.css
@@ -58,7 +58,20 @@
                 }
     }
 
+#a3{
 
+    animation: blinkingBackground 2s infinite;
+    
+    
+    }
+    @keyframes blinkingBackground{
+        
+        50%		{ 
+                    background-color: #e0ff7b; 
+                    border: 2px solid #e0ff7b;
+                    
+                }
+    }
  
  
 :root {
