--- a/css/app.css
+++ b/css/app.css
@@ -40,6 +40,7 @@
 		50%		{ 
                     background-color: #8c73fb; 
                     border: 2px solid #8c73fb;
+                    color:white;
                     
                 }
 	}
