--- a/css/app.css
+++ b/css/app.css
@@ -40,9 +40,9 @@
     margin: 0;
 }
 
-.YouTube_parent {
-    padding-top: 0px;
-    padding-bottom: 0px;
+.youtube {
+    margin-top: 0px;
+    margin-bottom: 0px;
     
 }
 
