--- a/css/app.css
+++ b/css/app.css
@@ -31,27 +31,13 @@
     color: black;
 }
 
-.div1 {
-    display: flex;
-    align-items: center;
+.circle-img {
+    border-radius: 15%; /* Makes the image circular */
+    border: 2px solid #333; /* Border style */
+    overflow: hidden; /* Hides overflow content outside the circle */
+    display: inline-block; /* Ensures the border is tight around the image */
 }
 
-.div1 p {
-    margin: 0;
-}
-
-.youtube {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    
-}
-
-.YouTube_child {
-    width: 4%; /* 50% width of the parent */
-    height: 4%; /* 50% height of the parent */
-
-   
-}
 
 #a0 {
     animation: blinkingBackground5 2s infinite;
